@@ -51,6 +51,29 @@ Or in `jbundle.toml`:
 profile = "cli"
 ```
 
+## JVM Flags
+
+Each profile injects specific JVM flags into the generated binary:
+
+### cli
+
+```
+-XX:+TieredCompilation
+-XX:TieredStopAtLevel=1
+-XX:+UseSerialGC
+```
+
+- **TieredStopAtLevel=1**: Uses only C1 compiler (fast compilation, no C2 optimization)
+- **UseSerialGC**: Simple single-threaded GC, minimal overhead
+
+### server
+
+No additional flags. Uses JVM defaults:
+- Full tiered compilation (C1 → C2)
+- G1GC garbage collector
+
+> **Note:** Because `server` adds no GC flags, it's the right choice when you want to specify a custom garbage collector via `jvm_args`.
+
 ## Performance Comparison
 
 | Metric | cli | server |
@@ -75,6 +98,24 @@ server profile:
   ✓ Web servers
   ✓ Background services
   ✓ Throughput is critical
+```
+
+## GC Conflict Detection
+
+jbundle automatically detects conflicts between the profile's garbage collector and custom `jvm_args`.
+
+The `cli` profile uses `-XX:+UseSerialGC`. If your `jvm_args` specifies a different GC (like `-XX:+UseZGC` or `-XX:+UseG1GC`), jbundle will emit a warning:
+
+```
+WARN GC conflict: profile 'cli' uses -XX:+UseSerialGC but jvm_args contains -XX:+UseZGC. The JVM cannot use multiple garbage collectors. Consider using profile = "server" or removing -XX:+UseZGC from jvm_args.
+```
+
+The build continues, but the JVM will likely fail at runtime. To fix this, use `profile = "server"` which doesn't set any GC flags:
+
+```toml
+# jbundle.toml - using ZGC with server profile
+profile = "server"
+jvm_args = ["-XX:+UseZGC", "-XX:+UnlockExperimentalVMOptions"]
 ```
 
 ## Combining with AppCDS and CRaC
